# iam

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  iam.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 167c8a0dd4ae_initial_migration.py
app/: main.py
app/api/v1/endpoints/: role.py  user.py
app/core/: config.py
app/crud/: role.py  user.py
app/db/: session.py
app/models/: role.py  user.py
app/schemas/: user.py
certs/: tls.crt  tls.key
iam/: main.py
iam/api/v1/endpoints/: role.py  user.py
iam/core/: cache.py  config.py  messaging.py  resilience.py
iam/crud/: role.py  user.py
iam/db/: base.py  session.py
iam/models/: role.py  user.py
iam/schemas/: role.py  user.py
k8s/: deployment.yml  ingress.yml  monitor.yml  rabbitMQ.yml  service.yml
tests/: conftest.py  test_api.py  test_cache.py  test_crud.py  test_metrics.py  test_resilience.py  test_role.py
